# jupyterlab_robotmode

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  environment.yml  jest.config.js  package.json  pyproject.toml  setup.py  tsconfig.json  tsconfigbase.json
.binder/: environment.yml  postBuild
.github/workflows/: main.yml
jupyterlab_robotmode/: __init__.py  _version.py
src/: icons.ts  index.ts  mode.test.ts  mode.ts  plugin.ts  tokens.ts  typings.d.ts
tests/: mode.test.ts  tsconfig.json
tests/__snapshots__/: mode.test.ts.snap
tests/mode.test.fixtures/: 00-tasks.robot  01-try-except.robot  02-while.robot  03-inline-if.robot  04-return.robot
